partial views added

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,10 @@
-﻿@{
-    Layout = "_Layout";
-}
+﻿@model HomeViewModel
+
+<div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 row-cols-xl-7 g-4">
+    @foreach (var p in Model.InventoryItemsOnSale ?? Enumerable.Empty<InventoryItem>())
+    {
+        <div class="col">
+            <partial name="_InventoryItem" model="p" />
+        </div>
+    }
+</div>
