--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using CarServiceProject
 @using CarServiceProject.Models
 @using CarServiceProject.ViewModels;
+@using CarServiceProject.Components;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, CarServiceProject
