--- a/Views/Shared/_ContactForm.cshtml
+++ b/Views/Shared/_ContactForm.cshtml
@@ -7,13 +7,13 @@
             <div class="card book-card mt-2 mx-auto p-4 bg-light">
                 <div class="card-body bg-light">
                     <div class="container">
-                        <form id="contact-form" role="form">
+                        <form id="contact-form" role="form" method="post" action="/Booking/AddBooking">
                             <div class="controls">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="form_name">Firstname *</label>
-                                            <input id="form_name" type="text" name="name" class="form-control"
+                                            <input id="form_name" type="text" name="firstname" class="form-control"
                                                 placeholder="Please enter your firstname *" required="required"
                                                 data-error="Firstname is required.">
                                         </div>
@@ -21,7 +21,7 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="form_lastname">Lastname *</label>
-                                            <input id="form_lastname" type="text" name="surname" class="form-control"
+                                            <input id="form_lastname" type="text" name="lastname" class="form-control"
                                                 placeholder="Please enter your lastname *" required="required"
                                                 data-error="Lastname is required.">
                                         </div>
@@ -39,14 +39,14 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="form_need">Please specify your need *</label>
-                                            <select id="form_need" name="need" class="form-control" required="required"
+                                            <select id="form_need" name="ServiceId" class="form-control" required="required"
                                                 data-error="Please specify your need.">
                                                 <option value="" selected disabled>--Select Your Issue--</option>
                                                 @foreach (var service in @Model)
                                                 {
-                                                    <option>@service.Name</option>
+                                                    <option value="@service.ServiceId">@service.Name</option>
                                                 }
-                                                <option>Other</option>
+                                                <option value="">Other</option>
                                             </select>
                                         </div>
                                     </div>
@@ -55,7 +55,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="form_message">Message *</label>
-                                            <textarea id="form_message" name="message" class="form-control"
+                                            <textarea id="form_message" name="Message" class="form-control"
                                                 placeholder="Write your message here." rows="4" required="required"
                                                 data-error="Please, leave us a message."></textarea>
                                         </div>
