--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="InventoryItem"
                                 asp-action="List">Inventory</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Service"
+                                asp-action="List">Service</a>
+                        </li>
                     </ul>
                 </div>
             </div>
