--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,6 +41,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Service"
                                asp-action="List">Service</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Booking"
+                               asp-action="Records">Manage booking records</a>
+                            </li>
                     </ul>
                 </div>
                 <div>
