--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -31,22 +31,11 @@
                 <div>
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-success">Log in</button>
                 </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>
             </form>
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <h2>Use your CarService account to log in and manage your bookings.</h2>
+        <h2>Use your CarService Admin account to log in and manage all bookings.</h2>
     </div>
 </div>
 
