--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,12 +36,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="InventoryItem"
                                asp-action="Search">Inventory (API)</a>
-                            </li>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Service"
-                                asp-action="List">Service</a>
+                               asp-action="List">Service</a>
                         </li>
                     </ul>
+                </div>
+                <div>
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
